# todo_rust_api

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: docker.yml
.sqlx/: query-5b69a8aed0a51b4d0088ca1e420102d9f371af1f4c617698f558f55cdad3cbac.json  query-63da2d939ed29b7d5c098b935bc2f9740d679c94fd211e692a7e1520f203fcf3.json  query-74bdd6bf0547f245337f0cd5a04539ce27865dac33aca5b3fd37b3ae7454adfd.json  query-e732d22af41a37f7ac866a54779935d05cbe18d2e5dbbdd4e38ffa2a24d485a6.json
db/: tables.sql
src/: main.rs
src/data/: dao.rs  db.rs  mod.rs  repository.rs
src/domain/: models.rs  repository.rs
src/presentation/: api.rs  handlers.rs  routes.rs
tests/: integration_tests.rs
tests/common/: mod.rs
tools/: curl.md
