[package]
name = "todo_rust_api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "update_db"
path = "bin/update_db.rs"

[dependencies]
sea-orm = { version = "2.0.0-rc.37", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
] }
axum = "0.8"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
logs = "0.7.1"
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { "version" = "9.0.2", features = ["axum"] }
async-trait = "0.1.89"

[dev-dependencies]
mockall = "0.14.0"
tower = { version = "0.5", features = ["util"] }
testcontainers = "0.27.1"
